--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ input::placeholder {
   -webkit-text-fill-color: rgb(20, 40, 80);
 }
 h1 {
-  margin: calc(30vh - 100px) auto 0;
+  margin: calc(30vh - 100px) auto;
   color: white;
 }
 form {
