--- a/style.css
+++ b/style.css
@@ -42,8 +42,21 @@ html {
     rgb(20, 40, 80) 100%
   );
 }
-input {
-  font-family: "Orbitron", sans-serif;
+#title {
+  margin: 200px auto;
+  color: white;
+  text-align: center;
+  font-size: 40px;
+  font-family: Arial, sans-serif;
+}
+#form {
+  text-align: center;
+  margin: calc(50vh - 100px) auto 0;
+  max-width: 400px;
+  width: 90vw;
+}
+#password {
+  font-family: Arial, sans-serif;
   font-weight: 900;
   margin: 20px 0;
   width: 100%;
@@ -54,28 +67,21 @@ input {
   background-color: rgb(10, 20, 40);
   font-size: 40px;
 }
-input::placeholder {
-  font-family: "Orbitron", sans-serif;
-  color: rgb(20, 40, 80);
-  -webkit-text-fill-color: rgb(20, 40, 80);
-}
-h1 {
-  margin: calc(30vh - 100px) auto;
-  color: white;
-}
-form {
-  text-align: center;
-  margin: calc(50vh - 100px) auto 0;
-  max-width: 400px;
-  width: 90vw;
-}
-p {
-  word-wrap: break-word;
-  overflow-wrap: break-word;
-  font-family: "Orbitron", sans-serif;
-  font-weight: 600;
-  font-size: 20px;
-  line-height: 40px;
+#username {
+  font-family: Arial, sans-serif;
+  font-weight: 900;
+  margin: 20px 0;
+  width: 100%;
+  height: 100px;
+  border-radius: 25px;
   color: rgb(200, 210, 240);
   -webkit-text-fill-color: rgb(200, 210, 240);
+  background-color: rgb(10, 20, 40);
+  font-size: 40px;
+}
+#username::placeholder,
+#password::placeholder {
+  font-family: Arial, sans-serif;
+  color: rgb(20, 40, 80);
+  -webkit-text-fill-color: rgb(20, 40, 80);
 }
