--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ html {
   );
 }
 #title {
-  margin: 200px auto;
+  margin: 200px auto 0;
   color: white;
   text-align: center;
   font-size: 40px;
@@ -51,7 +51,7 @@ html {
 }
 #form {
   text-align: center;
-  margin: calc(50vh - 100px) auto 0;
+  margin: 20vh auto 0;
   max-width: 400px;
   width: 90vw;
 }
