--- a/style.css
+++ b/style.css
@@ -46,14 +46,26 @@ html {
   margin: 200px auto 0;
   color: white;
   text-align: center;
-  font-size: 40px;
+  font-size: 50px;
   font-family: Arial, sans-serif;
 }
 #form {
   text-align: center;
-  margin: 20vh auto 0;
+  margin: 5vh auto 0;
   max-width: 400px;
   width: 90vw;
+}
+#username {
+  font-family: Arial, sans-serif;
+  font-weight: 900;
+  margin: 20px 0;
+  width: 100%;
+  height: 150px;
+  border-radius: 25px;
+  color: rgb(200, 210, 240);
+  -webkit-text-fill-color: rgb(200, 210, 240);
+  background-color: rgb(10, 20, 40);
+  font-size: 40px;
 }
 #password {
   font-family: Arial, sans-serif;
@@ -65,23 +77,17 @@ html {
   color: rgb(200, 210, 240);
   -webkit-text-fill-color: rgb(200, 210, 240);
   background-color: rgb(10, 20, 40);
-  font-size: 40px;
-}
-#username {
-  font-family: Arial, sans-serif;
-  font-weight: 900;
-  margin: 20px 0;
-  width: 100%;
-  height: 100px;
-  border-radius: 25px;
-  color: rgb(200, 210, 240);
-  -webkit-text-fill-color: rgb(200, 210, 240);
-  background-color: rgb(10, 20, 40);
-  font-size: 40px;
+  font-size: 30px;
 }
 #username::placeholder,
 #password::placeholder {
   font-family: Arial, sans-serif;
   color: rgb(20, 40, 80);
   -webkit-text-fill-color: rgb(20, 40, 80);
+}
+#button {
+  margin: 2vh auto 0;
+  width: 20%;
+  height: 50px;
+  color: rgb(255, 255, 255);
 }
