--- a/style.css
+++ b/style.css
@@ -43,41 +43,32 @@ html {
   );
 }
 #title {
-  margin: 200px auto 0;
+  margin: 250px auto 0;
   color: white;
   text-align: center;
-  font-size: 50px;
+  font-size: 45px;
   font-family: Arial, sans-serif;
 }
 #form {
   text-align: center;
-  margin: 5vh auto 0;
+  margin: 2vh auto;
   max-width: 400px;
   width: 90vw;
 }
-#username {
-  font-family: Arial, sans-serif;
-  font-weight: 900;
-  margin: 20px 0;
-  width: 100%;
-  height: 50px;
-  border-radius: 25px;
-  color: rgb(200, 210, 240);
-  -webkit-text-fill-color: rgb(200, 210, 240);
-  background-color: rgb(10, 20, 40);
-  font-size: 30px;
-}
+#username,
 #password {
   font-family: Arial, sans-serif;
   font-weight: 900;
-  margin: 20px 0;
   width: 100%;
-  height: 50px;
+  height: 40px;
   border-radius: 25px;
   color: rgb(200, 210, 240);
   -webkit-text-fill-color: rgb(200, 210, 240);
   background-color: rgb(10, 20, 40);
-  font-size: 30px;
+  font-size: 20px;
+}
+#username {
+  margin: 2vh auto 0;
 }
 #username::placeholder,
 #password::placeholder {
@@ -86,8 +77,12 @@ html {
   -webkit-text-fill-color: rgb(20, 40, 80);
 }
 #button {
-  margin: 2vh auto 0;
-  width: 20%;
-  height: 50px;
+  font-family: Arial, sans-serif;
+  font-weight: 900;
+  margin: 5vh auto 0;
+  width: 100%;
+  height: 40px;
   color: rgb(255, 255, 255);
+  background-color: cornflowerblue;
+  border-radius: 25px;
 }
