--- a/style.css
+++ b/style.css
@@ -67,9 +67,9 @@ html {
   background-color: rgb(10, 20, 40);
   font-size: 20px;
 }
-#username {
+/*#username {
   margin: 2vh auto 0;
-}
+}*/
 #username::placeholder,
 #password::placeholder {
   font-family: Arial, sans-serif;
