--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ html {
   font-family: Arial, sans-serif;
   font-size: 20px;
   color: darkred;
-  
+  margin: 1vh auto 0;
 }
 #button {
   font-family: Arial, sans-serif;
