--- a/style.css
+++ b/style.css
@@ -39,21 +39,21 @@ html {
   background-image: linear-gradient(
     to top,
     rgb(10, 20, 40) 0%,
-    rgb(20, 40, 80) 100%
+    rgb(32, 71, 149) 100%
   );
 }
+#form {
+  text-align: center;
+  margin: 28vh auto;
+  max-width: 400px;
+  width: 90vw;
+}
 #title {
-  margin: 250px auto 0;
   color: white;
   text-align: center;
   font-size: 45px;
   font-family: Arial, sans-serif;
-}
-#form {
-  text-align: center;
-  margin: 2vh auto;
-  max-width: 400px;
-  width: 90vw;
+  font-weight: 600;
 }
 #username,
 #password {
@@ -64,9 +64,9 @@ html {
   border-radius: 25px;
   color: rgb(200, 210, 240);
   -webkit-text-fill-color: rgb(200, 210, 240);
-  background-color: rgb(10, 20, 40);
+  background-color: rgb(9, 22, 48);
   font-size: 20px;
-  margin: 2vh auto 0;
+  margin: 5% auto 0;
 }
 #username::placeholder,
 #password::placeholder {
@@ -78,15 +78,15 @@ html {
   font-family: Arial, sans-serif;
   font-size: 15px;
   color: darkred;
-  margin: 1vh auto 0;
+  margin: 2% auto 0;
 }
 #button {
   font-family: Arial, sans-serif;
   font-weight: 900;
-  margin: 5vh auto 0;
+  margin: 14% auto 0;
   width: 100%;
   height: 40px;
   color: rgb(255, 255, 255);
-  background-color: cornflowerblue;
+  background-color: rgb(76, 110, 171);
   border-radius: 25px;
 }
