--- a/style.css
+++ b/style.css
@@ -22,10 +22,13 @@ script {
 html,
 body,
 p,
-#form,
+form,
+#div,
+#line,
 #title {
   display: block;
 }
+.point,
 input {
   display: inline-block;
 }
@@ -44,16 +47,17 @@ html {
 }
 #form {
   text-align: center;
-  margin: 28vh auto;
+  margin: 20vh auto;
   max-width: 400px;
   width: 90vw;
 }
 #title {
   color: white;
   text-align: center;
-  font-size: 45px;
+  font-size: 50px;
   font-family: Arial, sans-serif;
   font-weight: 600;
+  margin: 0 auto 2%;
 }
 #username,
 #password {
@@ -64,9 +68,9 @@ html {
   border-radius: 25px;
   color: rgb(200, 210, 240);
   -webkit-text-fill-color: rgb(200, 210, 240);
-  background-color: rgb(9, 22, 48);
+  background-color: rgb(10, 23, 48);
   font-size: 20px;
-  margin: 5% auto 0;
+  margin: 3% auto 0;
 }
 #username::placeholder,
 #password::placeholder {
@@ -74,16 +78,43 @@ html {
   color: rgb(20, 40, 80);
   -webkit-text-fill-color: rgb(20, 40, 80);
 }
+#line {
+  width: 60%;
+  height: 1px;
+  background-color: rgb(139, 150, 250);
+  margin: 3% auto 0;
+}
 #message {
+  font-family: Arial, sans-serif;
+  font-size: 20px;
+  color: rgb(133, 139, 247);
+  margin: 2% auto 0;
+}
+#div {
+  width: 100%;
+  height: 150px;
+  text-align: center;
+  margin: 4% auto 0;
+  /*background-color: seagreen;*/
+}
+.point {
+  margin: 0 9% 11%;
+  width: 10px;
+  height: 10px;
+  background-color: rgb(41, 59, 163);
+  border: solid 4px rgb(11, 19, 66);
+  border-radius: 25px;
+}
+#message2 {
   font-family: Arial, sans-serif;
   font-size: 15px;
   color: darkred;
-  margin: 2% auto 0;
+  margin: 4% auto 0;
 }
 #button {
   font-family: Arial, sans-serif;
   font-weight: 900;
-  margin: 14% auto 0;
+  margin: 4% auto 0;
   width: 100%;
   height: 40px;
   color: rgb(255, 255, 255);
