--- a/style.css
+++ b/style.css
@@ -23,9 +23,9 @@ html,
 body,
 p,
 form,
-#div,
-#line,
-#title {
+div,
+line,
+title {
   display: block;
 }
 .point,
@@ -45,6 +45,20 @@ html {
     rgb(32, 71, 149) 100%
   );
 }
+header {
+  display: flex;
+  width: 100%;
+  height: 5vh;
+  align-items: center;
+  background-color: rgb(21, 48, 102);
+}
+header h1 {
+  margin: auto;
+  color: rgb(128, 140, 241);
+  font-family: Arial, sans-serif;
+  font-size: 20px;
+  font-weight: 700;
+}
 #form {
   text-align: center;
   margin: 20vh auto;
@@ -57,7 +71,7 @@ html {
   font-size: 50px;
   font-family: Arial, sans-serif;
   font-weight: 600;
-  margin: 0 auto 2%;
+  margin-bottom: 2%;
 }
 #username,
 #password {
@@ -70,13 +84,13 @@ html {
   -webkit-text-fill-color: rgb(200, 210, 240);
   background-color: rgb(10, 23, 48);
   font-size: 20px;
-  margin: 3% auto 0;
+  margin-top: 3%;
 }
 #username::placeholder,
 #password::placeholder {
   font-family: Arial, sans-serif;
-  color: rgb(20, 40, 80);
-  -webkit-text-fill-color: rgb(20, 40, 80);
+  color: rgb(15, 32, 66);
+  -webkit-text-fill-color: rgb(24, 49, 99);
 }
 #line {
   width: 60%;
@@ -88,14 +102,13 @@ html {
   font-family: Arial, sans-serif;
   font-size: 20px;
   color: rgb(133, 139, 247);
-  margin: 2% auto 0;
+  margin-top: 2%;
 }
 #div {
   width: 100%;
   height: 150px;
   text-align: center;
-  margin: 4% auto 0;
-  /*background-color: seagreen;*/
+  margin-top: 4%;
 }
 .point {
   margin: 0 9% 11%;
@@ -118,6 +131,6 @@ html {
   width: 100%;
   height: 40px;
   color: rgb(255, 255, 255);
-  background-color: rgb(76, 110, 171);
+  background-color: rgb(50, 86, 153);
   border-radius: 25px;
 }
